k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitopsdemo-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitopsdemo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
